Mon Apr  3 20:00:11 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/Literals.hpp:
        * CIDLC/Literals.cpp:

          Changed an enum value 'SIZE' to 'LIT_SIZE' to avoid an
          apparent conflict with something in WinDef.h on
          Windows.

Thu Mar 30 18:28:32 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>

        * ciao/Deployment_Events.idl
        * ciaosvcs/Events/CIAO_Events_Base/CIAO_EventServiceBase.cpp

          Fixed fuzz errors.

Thu Mar 30 17:16:17 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>

        * ciaosvcs/Events/CIAO_Direct/*

          Removed all files under this directory since they are
          no longer used.

Thu Mar 30 17:23:12 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>

        * tools/Config_Handlers/Config_Handlers.mpc

          Added link dependency to CIAO_Events_Handler project.

Thu Mar 30 16:38:25 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>

        * CIAO_DAnCE.mwc
        * CIAO_TAO.mwc
        * CIAO_TAO_DAnCE.mwc

          Added "ciaosvcs" into the workspace.

        * ciao/CCM_Core.mpc
        * ciao/CCM_Event.idl
        * ciao/Container_Base.cpp
        * ciao/Container_Base.h
        * ciao/Deployment_Core.idl
        * ciao/Deployment_Data.idl
        * ciao/Deployment_Events.idl

          Added an "CIAO_DnC_Events" project. Enhanced Deployment_Core.idl
          to support configuring and deploying pub/sub services.

        * DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp
        * DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.h
        * DAnCE/ExecutionManager/Execution_Manager_Impl.cpp
        * DAnCE/NodeApplication/NodeApplication_Impl.cpp
        * DAnCE/NodeApplication/NodeApplication_Impl.h
        * DAnCE/NodeApplication/NodeApplication_Impl.inl
        * DAnCE/NodeApplicationManager/Containers_Info_Map.cpp
        * DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.cpp
